[package]
name = "parity-orchestrator"
version = "0.1.0"
authors = ["Yurii Rashkovskii <yrashk@gmail.com>"]

[dependencies]
slog = "2.1"
slog-async = "2.2"
slog-term = "2.3"
jsonrpc-client-core = "0.2"
jsonrpc-client-http = { version = "0.2", default-features = false } # turn off default features to avoid requiring SSL
serde = "1.0"
serde_derive = "1.0"
hex = "0.3"
reqwest = "0.8"
config = "0.7"
clap = "2.29"
byteorder = "1.2"
arrayref = "0.3"
urlparse = "0.7"
chrono = "0.4"
